<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addRestaurant"
    android:gravity="center"
    android:paddingVertical="30dp"
    android:background="@color/brown"
    android:orientation="vertical">
    <ImageView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="start"
        android:id="@+id/ivback"
        android:layout_marginStart="20dp"
        android:src="@drawable/backarrow"/>
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/logo"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/pink"
        android:text="@string/add_new_restaurant"/>
    <LinearLayout
        android:layout_marginHorizontal="40dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="0dp"
        android:layout_weight="5">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/lightbrown"
            app:boxBackgroundMode="outline"
            android:hint="@string/name"
            android:layout_marginVertical="5dp"
            app:boxStrokeColor="@color/lightbrown">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_height="50dp"
                android:id="@+id/etname"
                android:textSize="15sp"
                android:maxLength="20"
                android:inputType="text"
                android:textColor="@color/white"
                android:layout_width="match_parent"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            app:boxBackgroundMode="outline"
            android:textColorHint="@color/lightbrown"            android:layout_height="wrap_content"
            android:hint="@string/location"
            android:layout_marginVertical="5dp"
            app:boxStrokeColor="@color/lightbrown">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_height="50dp"
                android:textColor="@color/white"
                android:id="@+id/etloc"
                android:maxLength="25"
                android:textSize="15sp"
                android:inputType="text"
                android:layout_width="match_parent"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            app:boxBackgroundMode="outline"
            android:layout_height="wrap_content"
            android:textColorHint="@color/lightbrown"
            android:hint="@string/phone"
            app:boxStrokeColor="@color/lightbrown"
            android:layout_marginVertical="5dp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_height="50dp"
                android:textColor="@color/white"
                android:id="@+id/etphone"
                android:maxLength="10"
                android:textSize="15sp"
                android:inputType="text"
                android:layout_width="match_parent"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            app:boxBackgroundMode="outline"
            android:layout_height="wrap_content"
            android:textColorHint="@color/lightbrown"
            android:hint="@string/description"
            android:layout_marginVertical="5dp"
            app:boxStrokeColor="@color/lightbrown">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_height="50dp"
                android:id="@+id/etdesc"
                android:maxLength="20"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:layout_width="match_parent"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            app:boxBackgroundMode="outline"
            android:layout_height="wrap_content"
            android:textColorHint="@color/lightbrown"
            android:hint="@string/rating"
            android:layout_marginVertical="5dp"
            app:boxStrokeColor="@color/lightbrown">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_height="50dp"
                android:id="@+id/etRatings"
                android:textSize="15sp"
                android:maxLength="20"
                android:inputType="numberDecimal"
                android:textColor="@color/white"
                android:layout_width="match_parent"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_marginVertical="20dp"
            android:layout_width="wrap_content"
            android:backgroundTint="@color/pink"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/btaddtolist"
            android:textColor="@color/brown"
            android:text="@string/add_to_list"/>

    </LinearLayout>

</LinearLayout>